added dependencies for scoring and fixed bug causing oom on npreds=1

--- a/pixi.toml
+++ b/pixi.toml
@@ -9,3 +9,9 @@ version = "0.1.0"
 [dependencies]
 pytorch-gpu = "*"
 debugpy = ">=1.8.17,<2"
+swi-prolog = ">=9.0.4,<10"
+tqdm = ">=4.67.1,<5"
+
+[pypi-dependencies]
+pyswip = ">=0.3.3, <0.4"
+wrapt-timeout-decorator = ">=1.5.1, <2"
